update appStyle and transitionAnimation to prevent scrollbars in windows.

--- a/styles/appStyle.css
+++ b/styles/appStyle.css
@@ -1446,7 +1446,6 @@ html[buildfire] body{
 	height:100% !important;
 	width:100% !important;
 	overflow-y:auto !important;
-	overflow-y:scroll !important;
 	-webkit-overflow-scrolling:touch !important;
 }
 
